more litle fixes - btns, z-indexes and small things

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -12,11 +12,6 @@
             display: none;
         }
         
-        
-        .side-bar {
-            background: pink;
-        }
-        
         a:hover
         {
             color: #000;
@@ -64,6 +59,7 @@
 
         .main-cont 
         {
+            position: relative;
             display: flex;
             justify-content: space-around;
             align-items: center;
@@ -244,14 +240,6 @@
         {
             display: none;
         }
-
-        .contact-down-arrow
-        {
-            font-size: 28px;
-            background: blue;
-            color: yellow;
-        }
-        
         
         
 /*-------------------------------------------- TEXT CONTAINER   */
@@ -310,6 +298,7 @@
 /*      Read Less Button     */
         #contact-read-less-btn
         {
+            position: relative;
             width: 60px;
             height: 60px;
             display: flex;
@@ -320,11 +309,8 @@
             margin-top: 0;
             opacity: .8;
             padding: 0;
+            z-index: 99999999999;
         }
-        
-        
-        
-        
         
         
         
@@ -378,11 +364,6 @@
         
         
         
-        
-        
-        
-        
-        
  /*-------------------------------------------- MEDIA QUERIES   */
        
         
@@ -425,6 +406,12 @@
                 padding: 0;
                 font-size: small;
             }
+
+            .headline
+            {
+                font-size: 2.4em;
+                margin-top: 15%;
+            }
             
             .contact-txt-cont
             {
@@ -444,13 +431,7 @@
                 width: 100%;
                 box-shadow: none;
             }
-            
-            .bttn
-            {
-                font-size: 1.4em;
-                height: 60px;
-                padding: 0 6%;
-            }
+
             .arrow
             {
                 display: none;
